# first_project

./: CMakeCache.txt  CMakeLists.txt  Makefile  MyFirstGame  MyFirstGame.cpp  MyfirstGame  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-b27d53471e01f3ed486a.json  cmakeFiles-v1-53cb5d3108bf4ba2c4ef.json  codemodel-v2-712bcb28307d7f7398d2.json  index-2025-10-31T07-57-50-0780.json  target-MyfirstGame-Debug-01bd0ec82ea46e6a3aeb.json
